TEST_PROGRAMS/VALID/02/runes.go
package main

func main(){

    println('\a','\b','\f','\n', '\r', '\t', '\v', '\\', '\'')
}
