TEST_PROGRAMS/INVALID/15/lexer3.go
package main;

func main() {
   println('hah, you can\'t escape that!');
}
